# router-skills-evolve

./: .gitignore  CLAUDE.md  CWY.md  CWY_35B_JOINT_EVOLUTION.md  README.md  README.zh.md  pytest.ini  requirements.txt  shepherd_local_faillog.txt  shepherd_log.txt  todo.md  tofix.md
auto_research/: README.md  arxiv_scrape.py  cron_entry.sh  idea_gen_local.py  orchestrator.py  (+56 more)
tau2_stage2/code/: pyproject.toml
tau2_stage2/code/adapters/: base.py
tau2_stage2/code/core/: slice_filter.py
tau2_stage2/code/core/configs/: pricing.yaml  student_pricing.yaml
tau2_stage2/code/core/configs/tier_pools/: tau2_bench.yaml
tau2_stage2/code/core/schemas/: artifacts.py
tau2_stage2/code/pipeline/config/: settings.py
tau2_stage2/code/pipeline/phases/: phase1_baseline.py  phase2_router.py  phase3_search.py  phase4_assembly.py
tau2_stage2/code/pipeline/prompts/: phase2_step_labeler.txt
tau2_stage2/code/training/configs/: accelerate_ddp.yaml  accelerate_fsdp2_dense.yaml  accelerate_fsdp2_moe.yaml
tau2_stage2/code/training/configs/runs/: 02_qwen3_5_4b_50.yaml  05_qwen3_5_4b_273.yaml  06_qwen3_4b_273.yaml  06_qwen3_5_9b_50.yaml  07_qwen3_5_9b_273.yaml  11_qwen3_30b_a3b_273.yaml
tau2_stage2/code/training/configs/runs_smoke/: smoke_2b.yaml
tau2_stage2/code/training/data/: heldout_split.py
tau2_stage2/code/training/eval/: harness.py  local_provider.py  vllm_serve.sh
tau2_stage2/code/training/orchestration/: eval_all.sh  plotting.py  plotting_step_budget.py  prepare_offline_artifacts.sh  run_pipeline.sh  setup_env_offline_venv.sh  train_all.sh
tau2_stage2/code/training/tests/: test_configs.py  test_harness.py  test_model_resolution.py  test_plotting.py  test_run_yamls.py  test_tool_shuffle.py
(+422 files in other folders)
